#
# Autoconfiguration files for proxytest (a MiX proxy)
# Konrad Rieck <kr@r0q.cx>
#

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libmixb.a
libmixb_a_SOURCES = CAChain.cpp CAChain.hpp CAChainTable.cpp CAChainTable.hpp\
                    CAFirstMixB.cpp CAFirstMixB.hpp CALastMixB.cpp CALastMixB.hpp\
                    CALastMixBChannelList.cpp CALastMixBChannelList.hpp typedefsb.hpp

includes = @INCLUDES@

