#
# Autoconfiguration files for proxytest (a MiX proxy)
# Konrad Rieck <kr@r0q.cx>
#

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libbenchmarking.a
libbenchmarking_a_SOURCES = CAMiddleMixBenchmarkDummy.cpp \
CAMiddleMixBenchmarkDummy.hpp \
CASingleSocketGroupDummy.hpp \
CASocketDummySend.hpp \
CASocketRecvFromMemory.hpp

includes = @INCLUDES@
