#
# Autoconfiguration files for proxytest (a MiX proxy)
# Konrad Rieck <kr@r0q.cx>
#

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libxml.a
libxml_a_SOURCES = xmloutput.cpp xmlinput.cpp xmlinput_c.cpp \
		   xmlconfig.h xmlinput.h xmlinputp.h xmloutput.h \
		   xmlstream.h 

includes = @INCLUDES@

